Make sure that credits and tooltip appear in front of the select menu on smaller viewports

--- a/src/components/Credits/styles.scss
+++ b/src/components/Credits/styles.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  z-index: 1;
+  z-index: 3;
 }
 
 .credits-button {
