--- a/src/components/Tooltip/styles.scss
+++ b/src/components/Tooltip/styles.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 48px;
+  z-index: 2;
 }
 
 .tooltip-button {
